2018-02-19  Sam Steingold  <sds@gnu.org>

	* constobj.d (lisp_implementation_version_built_string): No need
	for "#ifdef __DATE__", it is widely supported.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Bump version number.
	* version.sh: Bump version number to 2.49.93+.
	* version.h, src/configure: Regenerated.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Avoid "warning: command substitution: ignored null byte in input".
	Reported by Nelson Beebe.
	* m4/bold.m4 (RSE_BOLD): For vt100, remove trailing NUL bytes. Only
	physical terminals need these NULs; physical terminals are not in use
	any more nowadays.
	* aclocal.m4, src/configure, modules/*/configure: Regenerated.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Improve installation documentation.
	Reported by Nelson Beebe.
	* DEPENDENCIES: State which libsigsegv version to use on IRIX.

2018-02-18  Bruno Haible  <bruno@clisp.org>

	Make KERNELVOID32_HEAPCODES work on Linux/arm, Linux/hppa, Linux/m68k.
	Reported by Sébastien Villemot <sebastien@debian.org>.
	* lispbibl.d (KERNELVOID32A_HEAPCODES/KERNELVOID32B_HEAPCODES):
	If STACK_ADDRESS_RANGE >= 0xE0000000, use KERNELVOID32A_HEAPCODES, not
	KERNELVOID32B_HEAPCODES.
	(KERNELVOID32_HEAPCODES_WORKS): Set to 1 for Linux/hppa, Linux/m68k.
	(ONE_FREE_BIT_HEAPCODES/KERNELVOID32_HEAPCODES): Remove special handling
	of Linux/hppa and Linux/m68k.
	* Makefile.devel (multibuild-linux-hppa, multibuild-linux-m68k): Depend
	on build-porting32-gcc-kernelvoid32_heapcodes.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Fix a build failure on some Linux/arm machines.
	Namely, a "PSEUDOCODE_ALIGNMENT is not fulfilled" error.
	* lispbibl.d (C_CODE_ALIGNMENT) [ARM]: Define depending on __thumb__.
	(TYPECODES/HEAPCODES): Likewise.
	* makemake.in (XCFLAGS): On ARM, use GCC option '-marm', not
	'-falign-functions=4', in order to enforce C_CODE_ALIGNMENT == 4.

2018-02-17  Bruno Haible  <bruno@clisp.org>

	Comments.
	* lispbibl.d: Improve comments about memory map on Hurd/i386.
